--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -993,11 +993,12 @@
 	.peo_center .m_or_det .total p.p1{font-size: 0.83vw;color: #333;line-height: 1.04vw;margin-top: 1.04vw;}
 	.peo_center .m_or_det .total p.p2{font-size: 1.45vw;font-weight: bold; color: #333;line-height: 2vw;margin: 0.52vw 0;}
 	.peo_center .m_or_det .btn_div {padding: 0 2.08vw;}
-	.peo_center .m_or_det .btn_div a{width: 7.2vw;height: 32px;line-height: 32px;text-align: center;border-radius: 50px;border: 1px solid #cdcdcd;color: #333;
-	font-size: 16px;display: block;margin: 10px 0 10px 1.5vw;float: right;}
-	.peo_center .m_or_det .btn_div a:hover{background: #dddddd;}
-	.peo_center .m_or_det .btn_div a.red{color: #fe2a4d;border: 1px solid #fe2a4d;}
-	.peo_center .m_or_det .btn_div a.red:hover{background: #fe2a4d;border: 1px solid #fe2a4d;color: #fff;}
+	.peo_center .m_or_det .btn_div a{width: 7.2vw;height: 32px;line-height: 32px;text-align: center;border-radius: 50px;border: 1px solid #fe2a4d;color: #fff;
+	font-size: 16px;display: block;margin: 10px 0 10px 1.5vw;float: right;background: #fe2a4d;}
+	.peo_center .m_or_det .btn_div a:hover{background: #fe7289;border: 1px solid #fe7289;}
+	/*.peo_center .m_or_det .btn_div a.red{color: #fe2a4d;border: 1px solid #fe2a4d;}*/
+	/*.peo_center .m_or_det .btn_div a.red:hover{background: #fe2a4d;border: 1px solid #fe2a4d;color: #fff;}*/
+	
 	.peo_center .m_or_det .return_modal{position: absolute;bottom: -9vw;right: -1vw;border: 1px solid #eee;background: #f5f5f5;
 	padding: 1.66vw 2.08vw;width: 17vw;z-index: 9;display: none;}
 	.peo_center .m_or_det .return_modal span{display: block;position: absolute;top: -16px;left: 10vw;
@@ -1160,7 +1161,7 @@
 	.view_order .text_con h1{font-size: 24px;color: #333;line-height: 80px;margin-top: 10px;}
 	.view_order .text_con .top{border: 1px solid #eee;margin-bottom: 40px;}
 	.view_order .hui_div{height: 56px;background: #f5f5f5;padding-left: 10px;border-bottom: 1px solid #eee;}
-	.view_order .hui_div p{display: inline-block;float: left;line-height: 56px;margin-right: 6vw;font-size: 16px;}
+	.view_order .hui_div p{display: inline-block;float: left;line-height: 56px;margin-right: 3vw;font-size: 16px;}
 	
 	.view_order .ship .left {display: block;float: left;max-width: 480px;width: 40%; margin:0 80px 20px 20px;}
 	.view_order .ship .right{display: block;float: left;max-width: 360px;width: 36%;}
@@ -1437,7 +1438,7 @@
 	.pay .pay_text .pay_tb2 td{width: 38%;}
 	.pay .pay_text .pay_tb2 td:last-child{width: 62% !important;padding: 0 20px;box-sizing: border-box;}
 	.pay .pay_text .text2 p{font-size: 16px;color: #666;line-height: 22px;margin-top: 20px;text-align: center;}
-	.pay .pay_text .text3{max-width: 7.5rem;margin:0 auto ;background: #eee;text-align: center;}
+	.pay .pay_text .text3{max-width: 7.5rem;margin:0 auto ;background: #eee;text-align: center;padding: 0.4rem;}
 	.pay .pay_text .text3 .tsp_1{font-size: 18px;color: #333;}
 	.pay .pay_text .text3 .tsp_2{font-size: 16px;color: #666;}
 	.pay .pay_text .pd_div{padding: 0.4rem;position: relative;min-height: 3rem;}
@@ -1503,7 +1504,7 @@
 	
 	/********promotion********/
 	.promotion .img_bnr{display: block;margin:0 auto 65px auto;}
-	.promotion h1{font-size: 24px;font-family: bau;color: #000;line-height: 24px;margin-bottom: 40px;text-align: center;font-weight: normal;}
+	.promotion h1{font-size: 24px;font-family: bau;color: #000;line-height: 34px;margin-bottom: 40px;text-align: center;font-weight: normal;}
 	.promotion .pro_content {background: #fff;padding: 0;}
 	.promotion .pro_text .pro_ul .pic_img{border: 1px solid #f6f0f0;}
 	.promotion .pro_text .pro_ul .text{padding: 0 10px 20px 10px;}
