--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -17,9 +17,9 @@
 
 
 @media only screen and (min-width:921px ) {
-	.fanyi{position: absolute;left: 130px;top: 20px;width: 149px;
+	.fanyi{position: absolute;left: 130px;top: 20px;width: 135px;
 	height: 24px;line-height:24px;display: inline-block;overflow: hidden;}
-	.fanyi select{float: left;padding: 0;margin: 0 !important;height: 24px;line-height: 24px; border: 1px solid #ddd; }
+	.fanyi select{float: left;padding: 0;margin: 0 !important;height: 24px;line-height: 24px; border: 1px solid #ddd;width: 135px; }
 	
 	.banner .swiper-button-next,.banner .swiper-button-prev{opacity: 0;transition: all .5s;}
 	.banner:hover .swiper-button-next,
