--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -114,7 +114,7 @@ a.step{background: #333;color: #fff;border-radius: 5px;margin-top: 20px;display:
 .share_l{max-width: 400px !important;}
 
 /**头部**/
-.big_nav{position: fixed;top: 0;left: 0;z-index: 99;background: #fff;width: 100%;}
+.big_nav{position: fixed;top: 0;left: 0;z-index: 100;background: #fff;width: 100%;}
 .nav{position: relative;margin: auto;height: 144px;}
 .nav .whatapp{font-size: 14px;color: #333;position: absolute;top: 20px;right: 0;display: inline-block;padding-left: 24px;}
 .nav .whatapp img{position: absolute;left: 0;width: 16px;height: 16px;}
@@ -299,17 +299,18 @@ box-shadow: 0 -1px 10px 1px rgba(0,0,0,.2);}
 .yd_footer2 .ol_ydfot li.active img.active{display: none;}
 
 /**移动端头部**/
-.yd_nav{width:100%;height: 100%;position: fixed;right: 100%;top: 0;background: #fff;z-index: 9999;overflow: hidden;display: none;}
-.yd_nav .top{position: relative;height: 1.2rem;} 
+.yd_nav{width:100%;height: 100%;position: fixed;right: 100%;top: 0;background: rgba(0,0,0,.7);z-index: 99;overflow: hidden;display: none;}
+.yd_nav .top{position: relative;height: 1.2rem;background: #ffde64;width: 80%;} 
 .yd_nav .top .menu{position: absolute;top: 0.43rem;left: 0.4rem;width: 0.38rem;height: 0.31rem;display: block;}
 .yd_nav .top .close{position: absolute;top: 0.4rem;right: 0.4rem;width: 0.36rem;height: 0.35rem;display: block;}
-
-.yd_nav>ul{height: 100%;overflow: scroll;padding-bottom: 2.5rem;}
+.yd_nav>ul{height: 80%;overflow: scroll;width: 80%;background: #ffde64;}
 .yd_nav>ul>li{position: relative;}
 .yd_nav>ul>li>a{font-family: san_m;font-size: 0.3rem;font-weight: bold; color: #000;height: 0.38rem;line-height: 0.38rem;margin: 0.6rem 0;
 display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
-.yd_nav>ul>li .slide_img{width: 0.38rem;height: 0.38rem;display: block;position: absolute;padding: 0.6rem 0.4rem 0.4rem 0.4rem; right: 0;top: 0;}
-.yd_nav_ol {background: #f5f5f5;display: none;}
+.yd_nav>ul>li .slide_img{width: 0.38rem;height: 0.38rem;display: block;position: absolute;padding: 0.6rem 0.4rem 0.4rem 0.4rem; right: 0;top: 0;box-sizing: content-box;}
+.yd_nav>ul>li .slide_img img{width: 0.38rem;height: 0.38rem;display: block;transition: .5s;}
+.yd_nav>ul>li .slide_img.off img{transform: rotate(-45deg);}
+.yd_nav_ol {background: #ffde64;display: none;}
 .yd_nav_ol li a{font-family: san_r;font-size: 0.26rem;color: #333;height: 0.35rem;line-height: 0.35rem;margin: 0.4rem 0;display: block;}
 .yd_nav a.right_img{background: url(../img/png/nav_right.png) no-repeat right 0.4rem center;background-size: 0.2rem 0.35rem;padding:0 0.4rem;box-sizing: border-box;}
 
@@ -396,7 +397,6 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 		.ss_modal .con ol li a{padding: 0 30px;}
 	}
 }
-
 @media (min-width: 1px) and (max-width: 920px) {
 	.footer{display: none !important;}
 	.yd_footer,.yd_footer2{display: block !important;}
