--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -312,6 +312,11 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 .yd_nav>ul>li .slide_img.off img{transform: rotate(-45deg);}
 .yd_nav_ol {background: #ffde64;display: none;}
 .yd_nav_ol li a{font-family: san_r;font-size: 0.26rem;color: #333;height: 0.35rem;line-height: 0.35rem;margin: 0.4rem 0;display: block;}
+.yd_nav .tc_logo{background: #ffde64;width: 80%;height: 1.15rem;line-height: 1.15rem;padding-left: 0.4rem;}
+.yd_nav .tc_logo a{font-size: 0.3rem;border: 1px solid #000;padding: 0 0.1rem;border-radius: 3px;height: 0.4rem;border-radius: 16px;
+    display: inline-block;color: #000;float: left;line-height: 0.4rem;margin-top: 0.1rem;}
+.yd_nav .tc_logo i{float: left;font-size: 0.4rem;height: 0.4rem;padding: 0 0.1rem;line-height: 0.4rem;margin-top: 0.15rem; display: inline-block;}
+.yd_nav .tc_logo .tc_img{display: inline-block;float: left;max-height: 0.4rem;margin: 0.12rem 0.3rem 0 0;}
 .yd_nav a.right_img{background: url(../img/png/nav_right.png) no-repeat right 0.4rem center;background-size: 0.2rem 0.35rem;padding:0 0.4rem;box-sizing: border-box;}
 
 /**弹窗提示**/
