--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -152,14 +152,17 @@
 	.pro_content .pro_ul .pic_img{width: 100%;overflow: hidden;position: relative;}
 	.pro_content .pro_ul .pic_img img{display: block;transition: all .5s;}
 	.pro_content .pro_ul>li:hover .pic_img img{transform: scale(1.05);}
-	.pro_content .pro_ul .text{background: #fff;padding-bottom: 0.94vw;}
-	.pro_content .pro_ul .text span{font-family: san_r;font-size: 1.25vw;line-height: 1.25vw;margin:10px 0 0.73vw 0;padding: 0 1.25vw;
-	display: block;color: #000;position: relative;}
-	.pro_content .pro_ul .text span.new{position: absolute;top: 0;margin: 0 0 0 1.2vw;display: inline-block;color: #fff;
-	background: #1faf85;font-size: 0.93vw;width: 3.125vw;height: 1.25vw;text-align: center;padding: 0;}
-	.pro_content .pro_ul .text span.sale{position: absolute;top: 0;margin: 0 0 0 1.2vw;display: inline-block;color: #fff;
-	background: #f74d59;font-size: 0.93vw;width: 3.125vw;height: 1.25vw;text-align: center;padding: 0;}
-	
+	.pro_content .pro_ul .text{background: #fff;padding-bottom: 0.94vw;padding-top: 0.1rem}
+	.pro_content .pro_ul .text span{font-family: san_r;font-size: 1.25vw;line-height: 1.25vw;height: 1.25vw; margin:10px 0 0.73vw 0;padding: 0 1.25vw;
+	display: block;color: #000;position: relative;overflow: hidden;}
+	.pro_content .pro_ul .text span em{display: inline-block;float: left;}
+	.pro_content .pro_ul .text span del{display: inline-block;float: left;color: #999;text-decoration: line-through;margin-left: 0.2vw;font-size: 0.72vw;
+	height: 0.72vw;line-height: 0.72vw;position: relative;top: 0.5vw }
+	.pro_content .pro_ul .text span.new{margin: 0 0 0 0.8vw;display: inline-block;color: #fff;
+	background: #1faf85;font-size: 0.93vw;width: 2.8vw;height: 1.25vw;text-align: center;padding: 0;}
+	.pro_content .pro_ul .text span.sale{margin: 0 0 0 0.8vw;display: inline-block;color: #fff;
+	background: #f74d59;font-size: 0.93vw;width: 2.8vw;height: 1.25vw;text-align: center;padding: 0;}
+	.pro_content .pro_ul .text .modelling{font-size: 0.72vw;display: inline-block;float: left;background: #a89d9b;color: #fff;padding: 0 0.3vw;margin-left: 15px; }
 	
 	.pro_content .pro_ul .text p{font-family: arial;font-size: 0.72vw;line-height: 0.92vw; padding: 0 1.25vw;box-sizing: border-box;color: #333;
 	text-overflow: ellipsis;white-space: nowrap;overflow: hidden;}
@@ -1538,7 +1541,10 @@
 	.promotion .pro_text .pro_ul .text span{display:block;line-height: 24px; margin: 20px 0 8px 0;text-align: left;font-size: 24px;color: #fe2a4d;padding: 0;}
 	.promotion .pro_text .pro_ul .text .price i {font-size: 16px;color: #999;text-decoration: line-through;
 	display: block;float: left;text-align: left;}
-	.promotion .pro_text .pro_ul .fsbg_div{width: 72px;height: 32px;background: #fe2a4d;text-align: center;float: right;margin-top: 28px;}
+	.promotion .pro_text .pro_ul .text .modelling{background: #a89d9b;display: inline-block;font-size: 0.72vw;margin: 20px 0 8px 0;color:#fff;
+	height: 32px;line-height: 32px;padding: 0 10px; }
+	
+	.promotion .pro_text .pro_ul .fsbg_div{width: 72px;height: 32px;background: #fe2a4d;text-align: center;float: right;margin-top: 20px;}
 	.promotion .pro_text .pro_ul .fsbg_div i{color: #fff;font-size: 16px;line-height: 32px;}
 	.promotion .pro_content .bot{background: #f5f5f5;}
 	
@@ -1783,10 +1789,15 @@
 	.pro_content .pro_ul .pic_img img{display: block;width: 100% !important;height: auto !important;}
 	.pro_content .pro_ul .text span{font-family: helvetica;color: #333; font-size: 0.3rem;line-height: 0.32rem; display: block;
 	padding: 0 0.1rem 0 0.1rem;position: relative;margin-top: 0.2rem;font-weight: bold;}
-	.pro_content .pro_ul .text span.new{display: inline-block;width: 0.8rem;height: 0.3rem;text-align: center;position: absolute;top: 0;
-	background: #1faf85;color: #fff;font-size: 0.22rem;font-family: helvetica;margin: 0 0 0 0.2rem;font-weight: normal;}
-	.pro_content .pro_ul .text span.sale{display: inline-block;width: 0.8rem;height: 0.3rem;text-align: center;position: absolute;top: 0;
-	background: #f74d59;color: #fff;font-size: 0.22rem;font-family: helvetica;margin: 0 0 0 0.2rem;font-weight: normal;}
+	.pro_content .pro_ul .text span em{float: left;}
+	.pro_content .pro_ul .text span del{float: left;font-size: 0.18rem;color: #999;font-weight: normal;margin-left: 0.05rem;}
+	.pro_content .pro_ul .text span.new{display: inline-block;width: 0.5rem;height: 0.3rem;text-align: center;
+	background: #1faf85;color: #fff;font-size: 0.22rem;font-family: helvetica;margin: 0 0 0 0.1rem;font-weight: normal;float: left;}
+	.pro_content .pro_ul .text span.sale{display: inline-block;width: 0.5rem;height: 0.3rem;text-align: center;
+	background: #f74d59;color: #fff;font-size: 0.22rem;font-family: helvetica;margin: 0 0 0 0.1rem;font-weight: normal;float: left;}
+	.pro_content .pro_ul .text .modelling{font-size: 0.18rem;display: inline-block;float: left;background: #a89d9b;color: #fff;
+	padding: 0 0.15rem;margin-left: 0.15rem;font-weight: normal; }
+	
 	.pro_content .pro_ul .text p{font-family: helvetica;font-size:0.24rem;padding: 0 0.1rem;box-sizing: border-box;
 	color: #333;display: inline-block;width: 100%;}
 	.pro_content .pro_ul .sc_div{width: 0.8rem;height: 0.8rem;position: absolute;top: 0;right: 0;z-index: 2;
@@ -3016,12 +3027,14 @@
 	.promotion .img_bnr{display: block;margin:0 auto 0.6rem auto;}
 	.promotion h1{font-size: 0.24rem;font-family: bau;color: #000;line-height: 0.28rem;margin-bottom: 0.4rem;text-align: center;font-weight: normal;}
 	.promotion .pro_content {background: #fff;padding: 0;border: none;}
-	.promotion .pro_text .pro_ul .text .price{width: 50%;float: left;padding: 0 0.1rem;}	
+	.promotion .pro_text .pro_ul .text .price{width: 45%;float: left;padding: 0 0.1rem;}	
 	.promotion .pro_text .pro_ul .text span{display:block;line-height: 0.28rem; margin: 0.1rem 0 0.05rem 0;
 	text-align: left;font-size: 0.24rem;color: #fe2a4d;padding: 0;}
+	.promotion .pro_text .pro_ul .text .modelling{background: #a89d9b;display: inline-block;font-size: 0.16rem;margin: 0.1rem 0 0.05rem 0;color:#fff;
+	height: 0.4rem;line-height: 0.4rem;padding: 0 0.1rem; }
 	.promotion .pro_text .pro_ul .text .price i {font-size: 0.18rem;color: #999;text-decoration: line-through;
 	display: block;float: left;text-align: left;}
-	.promotion .pro_text .pro_ul .fsbg_div{width: 0.8rem;height: 0.4rem;background: #fe2a4d;text-align: center;float: right;margin-top: 0.15rem;}
+	.promotion .pro_text .pro_ul .fsbg_div{width: 0.8rem;height: 0.4rem;background: #fe2a4d;text-align: center;float: right;margin-top: 0.1rem;}
 	.promotion .pro_text .pro_ul .fsbg_div i{color: #fff;font-size: 0.18rem;line-height: 0.4rem;}
 	.promotion .pro_content .bot{background: #f5f5f5;}
 	
