--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -277,7 +277,6 @@ box-shadow: 0 -1px 10px 1px rgba(0,0,0,.2);}
 .yd_footer2 .ol_ydfot li .a_text{position: absolute;bottom: 100%;left: 0;display: none;}
 .yd_footer2 .ol_ydfot li .a_text a{display: block;width: 1.5rem;height: 0.9rem;}
 .yd_footer2 .ol_ydfot li .a_text a img{display: block;margin: 0;width: 100%;height: 0.9rem;}
-
 .yd_footer2 .ol_ydfot li:last-child{border-right: none;}
 .yd_footer2 .ol_ydfot li img{display: none;margin:0.15rem auto 0.1rem auto;width: 0.4rem;height: 0.4rem;}
 .yd_footer2 .ol_ydfot li img.active{display: block;}
@@ -292,12 +291,12 @@ box-shadow: 0 -1px 10px 1px rgba(0,0,0,.2);}
 .yd_footer2 .ol_ydfot li.active:nth-child(3) span.img{background: url(../img/png/cart-2.png) no-repeat center/0.42rem 0.36rem;}
 .yd_footer2 .ol_ydfot li.active:nth-child(4) span.img{background: url(../img/png/contact-2.png) no-repeat center/0.38rem 0.36rem;}
 .yd_footer2 .ol_ydfot li.active:nth-child(5) span.img{background: url(../img/png/account-2.png) no-repeat center/0.39rem 0.38rem;}
-
-
 .yd_footer2 .ol_ydfot li p{font-family: helvetica;font-size: 0.2rem;color: #333;line-height: 0.2rem;font-weight: bold;}
 .yd_footer2 .ol_ydfot li.active p{color: #f23030;}
 .yd_footer2 .ol_ydfot li.active img{display: block;}
 .yd_footer2 .ol_ydfot li.active img.active{display: none;}
+
+.yd_footer2 .ol_ydfot li.cart_count{position: absolute; top: 0;right: 0;}
 
 /**移动端头部**/
 .yd_nav{width:100%;height: 100%;position: fixed;right: 100%;top: 0;background: rgba(0,0,0,.7);z-index: 99;overflow: hidden;display: none;}
