--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -1184,7 +1184,7 @@
 	.view_order .hui_div p{display: inline-block;float: left;line-height: 56px;margin-right: 3vw;font-size: 16px;}
 	
 	.view_order .ship .left {display: block;float: left;max-width: 480px;width: 40%; margin:0 80px 20px 20px;}
-	.view_order .ship .right{display: block;float: left;max-width: 360px;width: 36%;}
+	.view_order .ship .right{display: block;float: left;max-width: 360px;width: 36%;margin:0 0px 20px 0px;}
 	
 	
 	.view_order .ship .h2_span{font-size: 20px;display: block;margin: 20px 0 15px 0;}
